--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     //retrofit和okhttp
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     //butterknife
@@ -45,5 +45,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     //baseAdapter
-    compile 'com.zhy:base-rvadapter:3.0.3'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+
+    //rxLifecycle
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
 }
